--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/Baileys#pull/804/head",
+    "sv443-joke-api": "github:sahithyandev/sv443-joke-api-js-wrapper",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "child_process": "^1.0.2",
