--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
   "description": "nodejs baileys based whatsapp bot",
   "repository": "https://github.com/jacktheboss220/Blender2.0",
   "keywords": ["whatsapp-bot", "blender-2.0"],
+  "env": {
+    "REMOVE_BG_KEY": {
+      "description": "A Remove.bg api key.",
+    },
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
