--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "BLENDER 2.0",
   "description": "nodejs baileys based whatsapp bot",
+  "logo": "https://i.ibb.co/8BMKcTQ/blender20.jpg",
   "repository": "https://github.com/jacktheboss220/Blender2.0",
   "keywords": ["whatsapp-bot", "blender-2.0"],
   "env": {
