--- a/app.json
+++ b/app.json
@@ -4,11 +4,6 @@
   "logo": "https://i.ibb.co/8BMKcTQ/blender20.jpg",
   "repository": "https://github.com/jacktheboss220/Blender2.0",
   "keywords": ["whatsapp-bot", "blender-2.0"],
-  "env": {
-    "REMOVE_BG_KEY": {
-      "description": "A Remove.bg api key."
-    }
-  },
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
@@ -26,3 +21,8 @@
     }
   ]
 }
+  //"env": {
+    //"REMOVE_BG_KEY": {
+      //"description": "A Remove.bg api key."
+    //}
+  //},
