--- a/app.json
+++ b/app.json
@@ -3,7 +3,10 @@
   "description": "nodejs baileys based whatsapp bot",
   "logo": "https://i.ibb.co/8BMKcTQ/blender20.jpg",
   "repository": "https://github.com/jacktheboss220/Blender2.0",
-  "keywords": ["whatsapp-bot", "blender-2.0"],
+  "keywords": [
+    "whatsapp-bot",
+    "blender-2.0"
+  ],
   "buildpacks": [
     {
       "url": "https://github.com/heroku/heroku-buildpack-nodejs.git"
